--- a/tericeirotrimestre/MainPage.xaml
+++ b/tericeirotrimestre/MainPage.xaml
@@ -1,36 +1,92 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="tericeirotrimestre.MainPage">
+             x:Class="tericeirotrimestre.MainPage"
+             BackgroundColor="#f7a06d">
 
     <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
 
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
+    <Grid Margin="10">
+        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="2*" />  
+            <RowDefinition Height="1*" />  
+            <RowDefinition Height="1*" />  
+            <RowDefinition Height="1*" /> 
+            <RowDefinition Height="1*" />  
+            <RowDefinition Height="1*" />  
+            <RowDefinition Height="1*" />  
+            <RowDefinition Height="1*" /> 
+        </Grid.RowDefinitions>
 
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
-    </ScrollView>
+        <Image Grid.Row="0" 
+        Grid.ColumnSpan="3" 
+        Source="Imagem1.png" />
+
+        <Label Grid.Row="1"
+         Grid.ColumnSpan="3" 
+         Text="Texto da Pergunta"
+         FontSize="16" 
+         VerticalOptions="Center"
+         HorizontalOptions="Center" />
+
+        <Button Grid.Row="2"
+         Grid.ColumnSpan="3"
+         Margin="5" 
+         Text="a-"
+         BackgroundColor="#730b46"/>
+
+        <Button Grid.Row="3"
+         Grid.ColumnSpan="3"
+         Margin="5"
+         Text="b-"
+         BackgroundColor="#730b46" />
+
+        <Button Grid.Row="4"
+         Grid.ColumnSpan="3"
+         Text="c-"
+         Margin="5" 
+         BackgroundColor="#730b46"/>
+
+        <Button Grid.Row="5"
+         Grid.ColumnSpan="3" 
+         Margin="5"
+         Text="d-" 
+         BackgroundColor="#730b46"/>
+
+        <Button Grid.Row="6"
+         Grid.ColumnSpan="3"
+         Margin="5" 
+         Text="e-"
+         BackgroundColor="#730b46"/>
+
+        <Button Grid.Row="7"
+         Grid.Column="0" 
+         Text="Cartas"
+         Margin="5" 
+         BackgroundColor="#730b46"/>
+
+        <Button Grid.Row="7"
+         Grid.Column="1" 
+         Text="Retire 1 errado"
+         Margin="5"
+         BackgroundColor="#730b46" />
+
+        <Button Grid.Row="7"
+         Grid.Column="2"
+         Text="Universitários"
+         Margin="5"
+         BackgroundColor="#730b46" />
+
+
+    </Grid>
+
+ </ScrollView>
 
 </ContentPage>
