--- a/tericeirotrimestre/AppShell.xaml
+++ b/tericeirotrimestre/AppShell.xaml
@@ -9,7 +9,7 @@
 
     <ShellContent
         Title=""
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        ContentTemplate="{DataTemplate local:ShowMilhao}"
+        Route="ShowMilhao" />
 
 </Shell>
